fix features alignment issue, see https://github.com/jest-website-migration/jest/issues/3

--- a/website-v2/static/css/jest.css
+++ b/website-v2/static/css/jest.css
@@ -241,7 +241,7 @@
 }
 
 .features .blockElement {
-  margin: 0;
+  margin: 0 !important;
 }
 
 .button.landing {
